tests/fixtures/valid/spec_inheritance_resolver/base.etcm
spec Runtime:
  device: str = Field(default="cpu")
