tests/fixtures/invalid/constraint_regex.etcm
spec User:
  name: str = Field(regex="^[a-z]+$")

impl default:
  name: "BadName"
